# minilate

./: .gitignore  .pre-commit-config.yaml  .rust-toolchain.toml  Cargo.toml  LICENSE-MIT  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: actionlint.yaml  ci.yaml
benches/: bench_handlebars.rs  bench_minijinja.rs  bench_minilate.rs  template_handlebars.hbs  template_minijinja.jinja  template_minilate.tmpl  utils.rs
scripts/: benchmark.sh  format.sh  lint.sh  test.sh
src/: ast.rs  engine.rs  error.rs  interface.rs  lib.rs  parser.rs  template.rs
tests/: fixtures.rs  integration.rs  serde.rs  serde_tests.rs
